2004-09-15  Florian Boor  <florian.boor@kernelconcepts.de>
    
    * namedetail.c: Fixed minor bug causing wrong defaults and warnings.
    * editing.c: Make name detail dialog work with new contacts. 
                 Moved name splitter to separate function.
    * namedetail.c: Removed debug code and old name splitter.
    * *.xml: Some more design tweaks and naming changes.
    * editing.c: Implemented new name splitter.
    * namedetail.*: Implemented selection lists for titles and suffixes.
    * editing.c: Improved widget packing.
    * *.xml: Some design changes in tab layout, some names changed.
	* main.c: Some middle-name fixes. Disable edit and new buttons
	          while edit window is open.
	
2004-09-14  Florian Boor  <florian.boor@kernelconcepts.de>

    * editing.c, main.c: Added parameter to edit_person() to set different 
                         window titles if editing or adding a contact.
    * Makefile: Version update.
    * namedetail.c, editing.c: Added middle name.
    * *.xml: Some reordering and new fields.
    * Removed contacts-tab.conf.de, it is not used anymore.
    
2004-09-04  Florian Boor  <florian.boor@kernelconcepts.de>

    * namedetail.c: Changed packing.

2004-08-25  Florian Boor  <florian.boor@kernelconcepts.de>

    Released Version 0.28
    * Makefile: Updated version number.
    * main.c: Support of some standard hotkeys (Ctrl+q, Ctrl+n...)
    * db.c: We support contacts without name now.
    * main.c: Added exception list of fields not to show in overview.
    * editing.c: Update categories list on abort, categories might have changed.
    * *.xml: Added company name.
    * main.c: get_tag_name(): Worked only on first page, fixed it.

2004-08-24  Florian Boor  <florian.boor@kernelconcepts.de>

    * editing.c: Added missing population of categories display.
    * db.c: Fixed warning.

2004-08-23  Florian Boor  <florian.boor@kernelconcepts.de>
    
    * main.c: Fixed category update.
    * Released V 0.27