@@ -441,13 +441,20 @@ static gboolean
 match_for_search (struct person *p, const gchar *text, struct gpe_pim_category *cat)
 {
   gchar *gn;
+  gchar *mn;
   gchar *fn;
   gchar *name;
+  gchar *company;
   
   if (p->given_name)
     gn = g_utf8_strdown(p->given_name, -1);
   else
     gn = g_strdup("");
+  
+  if (p->middle_name)
+    mn = g_utf8_strdown(p->middle_name, -1);
+  else
+    mn = g_strdup("");
   
   if (p->family_name)
     fn = g_utf8_strdown(p->family_name, -1);
@@ -459,17 +466,29 @@ match_for_search (struct person *p, const gchar *text, struct gpe_pim_category *
   else
     name = g_strdup("");
   
-  if (!g_str_has_prefix(gn,text) 
-      && !g_str_has_prefix(fn,text) && !g_str_has_prefix(name,text))
+  if (p->company)
+    company = g_utf8_strdown(p->company, -1);
+  else
+    company = g_strdup("");
+  
+  if (!g_str_has_prefix(gn, text) 
+      && !g_str_has_prefix(fn, text) 
+      && !g_str_has_prefix(name, text)
+      && !g_str_has_prefix(mn, text)
+      && !g_str_has_prefix(company, text))
     {
       if (gn) g_free(gn);
+      if (mn) g_free(mn);
       if (fn) g_free(fn);
-      if (fn) g_free(name);
-        return FALSE;
+      if (name) g_free(name);
+      if (company) g_free(company);
+      return FALSE;
     }
   if (gn) g_free(gn);
+  if (mn) g_free(mn);
   if (fn) g_free(fn);
-  if (fn) g_free(name);
+  if (name) g_free(name);
+  if (company) g_free(company);
     
 /* alternate method if nothing found 
   if ...
